bmp: Fix reading of MS AMCap2 generated files

Remove bogus number of colours check. I could not find any BMP readers
that used this sort of checks and removing it makes MS AMCap2 generated
files load properly.

https://bugzilla.gnome.org/show_bug.cgi?id=694950